unpackaged/main/default/objects/pse__Task_Time__c/pse__Task_Time__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__TaskTimeHelp</customHelpPage>
    <description>Records time entered against project tasks on the Time Entry page and associates project tasks with timecards.</description>
    <label>Task Time</label>
    <nameField>
        <displayFormat>TaskTime-{000000}</displayFormat>
        <label>Task Time Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>