unpackaged/main/default/objects/pse__Task_Time__c/fields/pse__Project_Task_Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Task_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task Assignment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The project task associated with the project task assignment must match the selected project task.</errorMessage>
        <filterItems>
            <field>pse__Project_Task_Assignment__c.pse__Project_Task__c</field>
            <operation>equals</operation>
            <valueField>$Source.pse__Project_Task__c</valueField>
        </filterItems>
        <infoMessage>Only project task assignments for the selected project task are shown.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Project_Task_Assignment__c</referenceTo>
    <relationshipLabel>Task Time</relationshipLabel>
    <relationshipName>Task_Time</relationshipName>
    <type>Lookup</type>
</CustomField>