unpackaged/main/default/objects/pse__Task_Time__c/fields/pse__Timecard__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard__c</fullName>
    <label>Timecard</label>
    <referenceTo>pse__Timecard_Header__c</referenceTo>
    <relationshipLabel>Task Time</relationshipLabel>
    <relationshipName>Task_Time</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>