unpackaged/main/default/objects/pse__Task_Time__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>